paste.css: add 4 new colors
Signed-off-by: Florian Pritz <bluewind@xssn.at>

--- a/data/paste.css
+++ b/data/paste.css
@@ -86,3 +86,7 @@ table.content .kwb  { color:#830000; }
 table.content .kwc  { color:#000000; font-weight:bold; }
 table.content .kwd  { color:#010181; }
 table.content .kwe  { color:#008200; }
+table.content .pps  { color:#818100; }
+table.content .ppc  { color:#008200; }
+table.content .opt  { color:#000000; }
+table.content .lin  { color:#555555; }
