--- a/data/default.css
+++ b/data/default.css
@@ -1,4 +1,3 @@
-/* standard elements */
 html {
 	min-height: 100%;
 	background: #fff;
@@ -32,36 +31,21 @@ body {
 }
 
 .top{
-	background-color: #eee;
-	position:fixed;
-	top:0;
-	padding: 5px;
-	padding-left:10px;
-	font-family: Monospace;
-	width:100%;
-	border-bottom:1px dotted #333;
+  background: #444;
+  color: #fff;
+  padding-left: 5px;
+  padding-top: 5px;
+  padding-bottom: 5px; 
+  border-bottom: 3px double gray; 
+}
+
+.top a {
+  color: lightblue;
 }
 
 .content {
 	padding-left:13px;
 	padding-top:13px;
-  margin-top:150px;
+  margin-top:100px;
 }
 
-.nav li a{
-	text-decoration: none;
-	padding: 3px 7px;
-	margin-right: -8px;
-	border-left: 1px solid #333 ;
-	border-right: 1px solid #333 ;
-	background-color: #e6e6ff;
-}
-.nav li{
-	display: inline;
-	margin: 0;
-}
-.nav {
-	margin-bottom: -2px;
-	margin-top: -2px;
-  text-align:center;
-}
