highlight complete line; not only line number
Signed-off-by: Florian Pritz <bluewind@xinu.at>

--- a/data/paste.css
+++ b/data/paste.css
@@ -14,6 +14,15 @@ body {
 .numbers a:target {
   background: yellow;
 }
+div#highlight_line {
+  background: yellow;
+	display: inline;
+	position: absolute;
+	z-index: -1;
+	left: 0;
+	width: 100%;
+
+}
 
 .content {
   padding-left:3px;
