--- a/data/paste-bash.css
+++ b/data/paste-bash.css
@@ -11,6 +11,7 @@
 .bash .co1 {color: #800000;}
 .bash .co2 {color: #cc0000; font-style: italic;}
 .bash .co3 {color: #000000; font-weight: bold;}
+.bash .co4 {color: #666666;}
 .bash .es1 {color: #000099; font-weight: bold;}
 .bash .es2 {color: #007800;}
 .bash .es3 {color: #007800;}
