--- a/data/paste-fsharp.css
+++ b/data/paste-fsharp.css
@@ -15,6 +15,7 @@
 .fsharp .coMULTI {color: #5d478b; font-style: italic;}
 .fsharp .co1 {color: #5d478b; font-style: italic;}
 .fsharp .co2 {color: #5d478b; font-style: italic;}
+.fsharp .co3 {color: #5d478b; font-style: italic;}
 .fsharp .br0 {color: #6c6;}
 .fsharp .sy0 {color: #a52a2a;}
 .fsharp .st0 {color: #3cb371;}
