--- a/data/paste-haskell.css
+++ b/data/paste-haskell.css
@@ -11,6 +11,7 @@
 .haskell .kw5 {color: maroon;}
 .haskell .co1 {color: #5d478b; font-style: italic;}
 .haskell .co2 {color: #339933; font-weight: bold;}
+.haskell .co3 {color: #5d478b; font-style: italic;}
 .haskell .coMULTI {color: #5d478b; font-style: italic;}
 .haskell .es0 {background-color: #3cb371; font-weight: bold;}
 .haskell .br0 {color: green;}
