--- a/data/paste-html4strict.css
+++ b/data/paste-html4strict.css
@@ -11,6 +11,7 @@
 .html4strict .sy0 {color: #66cc66;}
 .html4strict .st0 {color: #ff0000;}
 .html4strict .nu0 {color: #cc66cc;}
+.html4strict .sc-2 {color: #404040;}
 .html4strict .sc-1 {color: #808080; font-style: italic;}
 .html4strict .sc0 {color: #00bbdd;}
 .html4strict .sc1 {color: #ddbb00;}
