--- a/data/paste-ruby.css
+++ b/data/paste-ruby.css
@@ -9,6 +9,7 @@
 .ruby .kw3 {color:#CC0066; font-weight:bold;}
 .ruby .kw4 {color:#CC00FF; font-weight:bold;}
 .ruby .co1 {color:#008000; font-style:italic;}
+.ruby .co4 {color: #cc0000; font-style: italic;}
 .ruby .coMULTI {color:#000080; font-style:italic;}
 .ruby .es0 {color:#000099;}
 .ruby .br0 {color:#006600; font-weight:bold;}
