--- a/data/paste-css.css
+++ b/data/paste-css.css
@@ -10,6 +10,7 @@
 .css .co2 {color: #ff0000; font-style: italic;}
 .css .coMULTI {color: #808080; font-style: italic;}
 .css .es0 {color: #000099; font-weight: bold;}
+.css .es2 {color: #000099; font-weight: bold;}
 .css .br0 {color: #00AA00;}
 .css .sy0 {color: #00AA00;}
 .css .st0 {color: #ff0000;}
