--- a/data/paste-dos.css
+++ b/data/paste-dos.css
@@ -9,6 +9,8 @@
 .dos .kw3 {color: #b1b100; font-weight: bold;}
 .dos .kw4 {color: #0000ff; font-weight: bold;}
 .dos .co1 {color: #808080; font-style: italic;}
+.dos .co2 {color: #b100b1; font-style: italic;}
+.dos .co3 {color: #33cc33;}
 .dos .es0 {color: #ff0000; font-weight: bold;}
 .dos .br0 {color: #66cc66;}
 .dos .sy0 {color: #33cc33;}
@@ -18,5 +20,6 @@
 .dos .re0 {color: #b100b1; font-weight: bold;}
 .dos .re1 {color: #448844;}
 .dos .re2 {color: #448888;}
+.dos .re3 {color: #448888;}
 .dos .ln-xtra, .dos li.ln-xtra, .dos div.ln-xtra {background-color: #ffc;}
 .dos span.xtra { display:block; }
