css: limit width of <p> and <li> to 800px
Long lines streching across the entire screen are hard to read on wide
screens. 800px should be a good compromise

Signed-off-by: Florian Pritz <bluewind@xinu.at>

--- a/data/default.css
+++ b/data/default.css
@@ -21,6 +21,18 @@ body {
 	padding: 0;
 }
 
+p, li {
+	max-width: 800px;
+}
+
+.center {
+	text-align: center;
+	margin-top: 100px;
+}
+.center p {
+	max-width: 100%;
+}
+
 .clearer {
 	clear: both;
 	font-size: 0;
